fixed spacing

--- a/src/components/Analytical/Analytical.css
+++ b/src/components/Analytical/Analytical.css
@@ -54,7 +54,7 @@
 .billingInfo {
   margin-left: 2em;
   font-size: 1.2em;
-  margin-top: 40px;
+  margin-top: 38px;
 }
 
 .billingInfo p {
